syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.aurora.grpc";
option java_outer_classname = "ProcessMetricProto";

package aurora;

service ProcessMetricService {
  // 原始流式接口：客户端持续发送数据，服务端最后返回结果
  rpc Report(stream ProcessMetricMessage) returns (ProcessMetricAck);

}

// 新增消息结构：用于完整映射原始JSON
message ProcessMetricMessage {
  int32 placeId = 1;
  string ip = 2;
  int64 time = 3;
  int32 cFlag = 4;
  int32 xid = 5;
  repeated ProcessMetricItem metrics = 6;
}

message ProcessMetricItem {
  int32 tid = 7;
  double value = 8;
}

// 返回结果
message ProcessMetricAck {
  int32 code = 1;               // 200=成功
  string message = 2;
}

